# dx12-cmake-game-with-framework

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clang-format.txt  clang-tidy.txt
.github/: copilot-instructions.md
.github/workflows/: cmake.yaml
app/: CMakeLists.txt  app.cpp  app.h  main.cpp  utils.h
app/Application/: Application.cpp  Application.h  timer_updater.cpp  timer_updater.h
app/Framework/: CMakeLists.txt  types.h  utils.h
app/Framework/Error/: error_context.h  error_helpers.h  error_helpers_fast.h  framework_error.cpp  framework_error.h  status.h
app/Framework/Logging/: console_sink.cpp  debug_sink.cpp  file_sink.cpp  log_throttle.cpp  log_throttle.h  logger.cpp  logger.h  logger_config.h  sinks.h
app/Framework/Utils/: path_utils.cpp  path_utils.h
app/Game/: CMakeLists.txt  game.cpp  game.h  game_object.cpp  game_object.h  render_system.cpp  render_system.h
app/Game/Component/: camera_component.cpp  camera_component.h  component.h  renderer_component.cpp  renderer_component.h  transform_component.cpp  transform_component.h
app/Game/Scene/: scene.cpp  scene.h
app/Graphic/: CMakeLists.txt  WICTextureLoader12.cpp  WICTextureLoader12.h  buffer.cpp  buffer.h  d3dx12.h  debug_visual_renderer.cpp  debug_visual_renderer.h  debug_visual_renderer_2d.cpp  debug_visual_renderer_2d.h  debug_visual_service.cpp  debug_visual_service.h  depth_buffer.cpp  depth_buffer.h  descriptor_heap_allocator.cpp  descriptor_heap_allocator.h  descriptor_heap_manager.cpp  descriptor_heap_manager.h  fence_manager.cpp  fence_manager.h  framework_default_assets.cpp  framework_default_assets.h  gpu_resource.cpp  gpu_resource.h  graphic.cpp  graphic.h  mesh.cpp  mesh.h  pipeline_state_builder.cpp  pipeline_state_builder.h  primitive_geometry_2d.cpp  primitive_geometry_2d.h  render_target.cpp  render_target.h  root_signature_builder.cpp  root_signature_builder.h  scene_renderer.cpp  scene_renderer.h  shader_manager.cpp  shader_manager.h  (+10 more)
app/Graphic/Material/: material_instance.cpp  material_instance.h  material_manager.cpp  material_manager.h  material_template.cpp  material_template.h
app/Graphic/RenderPass/: depth_prepass.cpp  depth_prepass.h  forward_pass.cpp  forward_pass.h  fullscreen_pass_helper.cpp  fullscreen_pass_helper.h  postprocess_pass.cpp  postprocess_pass.h  render_constants.h  render_layer.h  render_pass.h  render_pass_manager.cpp  render_pass_manager.h  scene_renderer.cpp  scene_renderer.h  ui_pass.cpp  ui_pass.h
cmake/: shader.cmake
doc/: copilot-instructions.md  framework.md  technical_choice.md  trouble_shooting.md
shaders/: basic.ps.hlsl  basic.vs.hlsl  basic_type.hlsli  debug_line.ps.hlsl  debug_line.vs.hlsl  debug_ui.ps.hlsl  debug_ui.vs.hlsl
